fixed init and database bugs and crud for cities
